feat: add 4-bit and 8-bit quantization support via BitsAndBytes
- Add Qwen3VlQuantization enum with NONE, INT8, INT4 modes
- Add quantization config options (bnb_4bit_quant_type, double_quant)
- Implement _create_quantization_config() for BitsAndBytesConfig
- Add bitsandbytes as optional dependency [quantization]
- Update README with quantization documentation and VRAM estimates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
 
 [project.optional-dependencies]
 test = ["pytest"]
+quantization = ["bitsandbytes>=0.43.0"]
 
 [project.entry-points."docling"]
 qwen3vl_ocr = "docling_ocr_qwen3vl.plugins"
